# kolibri-project

./: .gitignore  10X_INVESTIGATION_COMPLETE.md  AGI_PROGRESS_REPORT.md  AI_ENCODER_INTEGRATION.md  ARCHIVER_SUMMARY.md  ARCHIVER_SUMMARY_RU.md  CLIENT_LINKS.md  CMakeLists.txt  COMMERCIAL_LAUNCH_PLAN.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DECIMAL_OPTIMIZATION_SUMMARY.md  DELIVERY_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FULL_PIPELINE_COMPLETE.md  INDEX_ALL_FILES.md  KOLIBRI_ARCHIVERS_COMPARISON.md  KOLIBRI_WEB_APP_READY.md  KOLIBRI_v1.0.0_COMPLETE.md  LICENSE-AGPL.md  LICENSE-COMMERCIAL.md  MACOS_FIX.md  MOBILE_APP_COMPLETE.md  Makefile  Makefile_archiver  PAYMENT_METHODS_RUSSIA.md  PRICING_RUSSIA.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START_LICENSING.md  README.md  README_OPTIMIZATION.md  README_proof.md  REAL_IMAGE_DEMO_RESULTS.md  RELEASE_v1.0.0_SUMMARY.txt  RESULT_1GB.md  START_HERE.sh  WHY_1000X_IS_IMPOSSIBLE.md  debug_archiver.c  (+16 more)
.github/workflows/: ml_tests.yml
KolibriApp/: KolibriApp.swift  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  kolibri_archiver  kolibri_coordinator  kolibri_indexer  kolibri_knowledge_server  kolibri_node  kolibri_sim  kolibri_tests  kolibri_verify_digit_masking  test_compress  test_context  test_corpus  test_generation  test_semantic
app/: README.md  SUMMARY.md  docker-compose.yml  install.sh
app/backend/: .env.example  .gitignore  Dockerfile  README.md  package.json
app/data/: norms_sample.csv
app/docs/: API.md  DEPLOYMENT.md  EXAMPLES.md
app/frontend/: .gitignore  Dockerfile  README.md  next.config.js  package.json
app/mobile/: App.tsx  README.md  app.json  package.json
app/wasm_core/: README.md  build.sh  calc_engine.c
apps/: README_ARCHIVER.md  README_ARCHIVER_RU.md  kolibri_archiver.c
archived/: kolibri-dict  kolibri-formula  kolibri-gen-true  kolibri-meta  kolibri_os_project.kolibri  kolibri_os_super_archive.kolibri.cpgz  kolibri_restored_check.kolibri
archived/deprecated/: plan.md
backend/python/: kolibri_compress.py
backend/service/: gpu_store.py  main.py  ml_api.py
backend/src/: compress.c  context_window.c  corpus_learning.c  decimal_fast10x.c  digit_text.c  formula_logic.c  knowledge.c  knowledge_server.c  logical_memory.c  script.c  semantic_digits.c  sha256.c  text_generation.c  wasm_bridge.c
benchmarks/: Makefile  compare_with_competitors  compare_with_competitors.c  kolibri_benchmark_suite  kolibri_benchmark_suite.c  kolibri_gpu_benchmark.m  run_all_benchmarks.sh
benchmarks/results/: BENCHMARK_REPORT_TEMPLATE.md  HONEST_REAL_TEST.md  KOLIBRI_1GB_TEST.md  KOLIBRI_2GB_TEST.md  KOLIBRI_REAL_DATA_TEST.md  KOLIBRI_SIMD_RESULTS.md  WIKIPEDIA_CORPUS_TEST.md
build-asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kolibri_tests
cloud-storage/: .gitignore  README.md  kompressor.js  package-lock.json  package.json  server.js  start.sh  test.js  test_client.py
demos/: DEMO_v1.0.0.md  live_demo.sh
docs/: IMPLEMENTATION_PLAN.md  OPTIMIZATION_REPORT.md  archiver.md  archiver_ru.md  ml_guide.md  project_plan.md  training_recipe.md
docs/analysis/: DECIMAL_10X_ANALYSIS.md  DECIMAL_10X_FINDINGS.md  DECIMAL_10X_INVESTIGATION_README.md  FORMULA_COMPRESSION_ANALYSIS.md  FORMULA_ONLY_STORAGE.md  FULL_PIPELINE_ARCHITECTURE.md  GENERATIVE_PROOF_L5_RECOVERY.md  IMAGE_CERTIFICATION.md  PHASE2_BREAKTHROUGH.md  REAL_CODE_VERIFICATION.md  knowledge_schema.sql  kolibri_ai_masterplan.md
docs/guides/: AGENTS.md  ARCHIVES_README.md  KOLIBRI_ARCHIVER_README.md  (+4 more)
kernel/: ai_encoder.c  ai_evolution.c
kolibri-archiver/: Makefile  README.md
ml/: README.md  __init__.py  config.yaml  requirements.txt
mobile/: GETTING_STARTED.md  MOBILE_APP_DOCUMENTATION.md  README.md
modules/: python_core.txt
scripts/: build_summary_module.py  collect_seeds.py  knowledge_pipeline.sh  kolibri_auto_data.py  kolibri_code_features.py  kolibri_crawler.py  kolibri_entity_relations.py  kolibri_fetch_docs.py  pack_proof.sh  process_user_screenshot.sh  run-demo.sh  run_autonomy.sh  run_qemu.sh  sentinel_guard.py  spectral_fingerprint.py  swarm_exchange.py  test_archiver.sh  verify_1gb.sh
seeds/: catalog.json
swarm/: nodes.json
test_results/: test_dict.kolibri  test_meta.kolibri  test_real.kolibri  test_v10.kolibri  test_v3.kolibri  test_v4.kolibri
tests/: bench_10x_comparison.c  bench_decimal.c  bench_decimal_10x.c  bench_decimal_10x_correct.c  bench_decimal_10x_realistic.c  bench_decimal_final.c  bench_decimal_parallel.c  bench_decimal_ultimate.c  bench_decimal_v2.c  bench_neon.c  bench_simd.c  bench_strategies.c  restore  restore.c  test_ai_encoder.c  test_archive_restore_demo.c  test_compress.c  test_compress_project.c  test_compress_project_v2.c  test_context.c  test_corpus.c  test_correct_architecture.c  test_correctness.c  test_decimal_standalone.c  test_extreme_compression.c  test_formula.c  test_formula_compression.c  test_formula_storage.c  test_full_pipeline.c  test_full_project_compression.c  test_generation.c  test_generative_compression.c  test_genome_stress.c  test_image_full_cycle.c  test_implement_300000x.c  test_logical_memory.c  test_main.c  test_mega_compression.c  test_multilevel_architecture.c  test_multilevel_compression.c  (+11 more)
tools/: bwt_test  generative_kernels.metal  kgpu_demo.c  kolibri-archive  kolibri-archive-real  kolibri-archive-v10  kolibri-archive-v3  kolibri-archive-v4  kolibri-cli-pro  kolibri-extreme  kolibri-fast  kolibri-formula  kolibri-fractal  kolibri-gen  kolibri-gen-gpu  kolibri-gpu  kolibri-gpu-final  kolibri-gpu-realtime  kolibri-hybrid  kolibri-hyper  kolibri-prod  kolibri-pure  kolibri-real  kolibri-simd  kolibri-turbo  kolibri-ultra  kolibri_10x  kolibri_10x.c  kolibri_archiver.c  kolibri_archiver_fractal.c  kolibri_archiver_real.c  kolibri_archiver_v10.c  kolibri_archiver_v3.c  kolibri_archiver_v4.c  kolibri_cli_pro.c  kolibri_dict  kolibri_dictionary_archiver.c  kolibri_extreme  kolibri_extreme.c  kolibri_extreme_v2  (+84 more)
training/: math_dialog.ks
web-app/: index.html  kolibri_generative.js
(+688 files in other folders)
